--- a/Assignment 9/portfolio/public/css/output.css
+++ b/Assignment 9/portfolio/public/css/output.css
@@ -602,6 +602,11 @@ video {
   margin-right: auto;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .-mt-px {
   margin-top: -1px;
 }
@@ -668,6 +673,14 @@ video {
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-52 {
+  margin-top: 13rem;
 }
 
 .block {
